// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-on > event modifier 1`] = `
"
  const n1 = t0()
  const n3 = t1()
  const n5 = t0()
  const n7 = t2()
  const n9 = t2()
  const n11 = t0()
  const n13 = t2()
  const n15 = t3()
  const n17 = t3()
  const n19 = t3()
  const n21 = t3()
  const n23 = t3()
  const n25 = t3()
  const n27 = t3()
  const n29 = t3()
  const n31 = t3()
  const n33 = t3()
  const n35 = t3()
  const n37 = t3()
  const n39 = t3()
  const n41 = t3()
  const n43 = t3()
  n1.$evtclick = _withModifiers(e => handleEvent(e), ["stop"])
  _on(n3, "submit", _withModifiers(e => handleEvent(e), ["prevent"]))
  n5.$evtclick = _withModifiers(e => handleEvent(e), ["stop","prevent"])
  n7.$evtclick = _withModifiers(e => handleEvent(e), ["self"])
  _on(n9, "click", e => handleEvent(e), {
    capture: true
  })
  _on(n11, "click", e => handleEvent(e), {
    once: true
  })
  _on(n13, "scroll", e => handleEvent(e), {
    passive: true
  })
  n15.$evtcontextmenu = _withModifiers(e => handleEvent(e), ["right"])
  n17.$evtclick = _withModifiers(e => handleEvent(e), ["left"])
  n19.$evtmouseup = _withModifiers(e => handleEvent(e), ["middle"])
  n21.$evtcontextmenu = _withKeys(_withModifiers(e => handleEvent(e), ["right"]), ["enter"])
  n23.$evtkeyup = _withKeys(e => handleEvent(e), ["enter"])
  n25.$evtkeyup = _withKeys(e => handleEvent(e), ["tab"])
  n27.$evtkeyup = _withKeys(e => handleEvent(e), ["delete"])
  n29.$evtkeyup = _withKeys(e => handleEvent(e), ["esc"])
  n31.$evtkeyup = _withKeys(e => handleEvent(e), ["space"])
  n33.$evtkeyup = _withKeys(e => handleEvent(e), ["up"])
  n35.$evtkeyup = _withKeys(e => handleEvent(e), ["down"])
  n37.$evtkeyup = _withKeys(e => handleEvent(e), ["left"])
  n39.$evtkeyup = _withModifiers(e => submit(e), ["middle"])
  n41.$evtkeyup = _withModifiers(e => submit(e), ["middle","self"])
  n43.$evtkeyup = _withKeys(_withModifiers(e => handleEvent(e), ["self"]), ["enter"])
  return [n1, n3, n5, n7, n9, n11, n13, n15, n17, n19, n21, n23, n25, n27, n29, n31, n33, n35, n37, n39, n41, n43]
"
`;

exports[`v-on > should delegate event 1`] = `
"import { delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  n0.$evtclick = e => _ctx.test(e)
  return n0
}"
`;

exports[`v-on > should not wrap keys guard if no key modifier is present 1`] = `
"
  const n0 = t0()
  n0.$evtkeyup = _withModifiers(e => test(e), ["exact"])
  return n0
"
`;

exports[`v-on > should support multiple modifiers and event options w/ prefixIdentifiers: true 1`] = `
"
  const n0 = t0()
  _on(n0, "click", _withModifiers(e => test(e), ["stop","prevent"]), {
    capture: true, 
    once: true
  })
  return n0
"
`;

exports[`v-on > should transform click.middle 1`] = `
"import { withModifiers as _withModifiers, delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
_delegateEvents("mouseup")

export function render(_ctx) {
  const n0 = t0()
  n0.$evtmouseup = _withModifiers(e => _ctx.test(e), ["middle"])
  return n0
}"
`;

exports[`v-on > should transform click.right 1`] = `
"import { withModifiers as _withModifiers, delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
_delegateEvents("contextmenu")

export function render(_ctx) {
  const n0 = t0()
  n0.$evtcontextmenu = _withModifiers(e => _ctx.test(e), ["right"])
  return n0
}"
`;

exports[`v-on > should use delegate helper when have multiple events of same name 1`] = `
"import { delegate as _delegate, withModifiers as _withModifiers, delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  _delegate(n0, "click", e => _ctx.test(e))
  _delegate(n0, "click", _withModifiers(e => _ctx.test(e), ["stop"]))
  return n0
}"
`;

exports[`v-on > should wrap keys guard for keyboard events or dynamic events 1`] = `
"
  const n0 = t0()
  _on(n0, "keydown", _withKeys(_withModifiers(e => test(e), ["stop","ctrl"]), ["a"]), {
    capture: true
  })
  return n0
"
`;

exports[`v-on > should wrap keys guard for static key event w/ left/right modifiers 1`] = `
"
  const n0 = t0()
  n0.$evtkeyup = _withKeys(e => test(e), ["left"])
  return n0
"
`;
